# backbone

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.ps1  dump.rdb  env.template  fly.toml  pradeep.diff  pyproject.toml
.github/workflows/: awsPush.yml  fly.yml
server/: db.py  fly.toml  main.py  redis.py  response_body.json  service_firebase.json  verification.py
server/ai_models/: ImageGenerator.py  OpenAIImageGenerator.py  StableDiffusionGenerator.py  TitanImageGenerator.py
server/aws_utils/: __init__.py
server/database/: AnalysisOperations.py  AuthOperations.py  BASE.py  BrowsedImageOperations.py  CartOperations.py  LikedImageOperations.py  OrderOperations.py  OrganizationOperation.py  PricesOperations.py  PromptOperations.py  SaltOperations.py  ShippingOperations.py  UserOperations.py
server/email_service/: EmailService.py
server/models/: AnalysisModel.py  BrowsedImageDataModel.py  CheckoutModel.py  EmailModel.py  EncryptModel.py  ItemModel.py  OrderItemModel.py  OrganizationModel.py  PricesModel.py  PromptModel.py  RetrieveModel.py  ShippingModel.py  UserInitModel.py  UserModel.py
server/routers/: __init__.py  admin_dashboard.py  auth.py  cart.py  email.py  favorites.py  imagen.py  order_info.py  organization.py  prices.py  printful.py  shipping_info.py  static.py  stripe.py
server/saml/: saml_settings.json  sp.xml
server/tests/: imagen_tests.py
server/utils/: error_check.py  format_error.py  printful_util.py  record_images.py  save_analysis.py  stripe_utils.py  update_cart.py  update_like.py
(+2 files in other folders)
